# numerical-integration

./: .dir-locals.el  CMakeLists.txt  README.md  conanfile.txt
.github/workflows/: build.yml
inc/: module.hpp
src/: main.cpp  module.cpp
tests/: tests.cpp
